tests/comp/sem/invalid/double_param.mj
class Bad {
    public int badMethod(int x/***, int x***/) {
        return 5;
    }
    public static void main(String[] args) {}
}
